<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>interface</class>
 <widget class="QWidget" name="interface">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>761</width>
    <height>442</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>chat</string>
  </property>
  <widget class="QTableWidget" name="tableWidget_userlist">
   <property name="geometry">
    <rect>
     <x>540</x>
     <y>36</y>
     <width>211</width>
     <height>361</height>
    </rect>
   </property>
  </widget>
  <widget class="QTableWidget" name="tableWidget_msgPage">
   <property name="geometry">
    <rect>
     <x>11</x>
     <y>36</y>
     <width>521</width>
     <height>361</height>
    </rect>
   </property>
  </widget>
  <widget class="QPushButton" name="btn_one">
   <property name="geometry">
    <rect>
     <x>560</x>
     <y>400</y>
     <width>71</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>one</string>
   </property>
  </widget>
  <widget class="QPushButton" name="btn_all">
   <property name="geometry">
    <rect>
     <x>670</x>
     <y>400</y>
     <width>71</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>all</string>
   </property>
  </widget>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>150</x>
     <y>10</y>
     <width>231</width>
     <height>19</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
       <string>you are talking to :</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="chatuser">
      <property name="text">
       <string>everyone</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>11</x>
     <y>404</y>
     <width>391</width>
     <height>31</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QLineEdit" name="lineEdit_msg"/>
    </item>
    <item>
     <widget class="QPushButton" name="btn_send">
      <property name="text">
       <string>send</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QPushButton" name="btn_refresh">
   <property name="geometry">
    <rect>
     <x>600</x>
     <y>5</y>
     <width>99</width>
     <height>27</height>
    </rect>
   </property>
   <property name="text">
    <string>refresh</string>
   </property>
  </widget>
  <widget class="QPushButton" name="btn_send_file">
   <property name="geometry">
    <rect>
     <x>410</x>
     <y>405</y>
     <width>99</width>
     <height>27</height>
    </rect>
   </property>
   <property name="text">
    <string>send file</string>
   </property>
  </widget>
  <widget class="QLabel" name="me">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>12</y>
     <width>61</width>
     <height>17</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
